Update admin routes
Update API like get a car, detail of a car
